Fixed button styling so it isn't squished into other elements

--- a/media/turan/base.css
+++ b/media/turan/base.css
@@ -308,7 +308,6 @@ h1 a
 /* Buttons
  * from http://particletree.com/features/rediscovering-the-button-element/ */
 .buttons a, .buttons button {
-	margin: 0 5px 0 0;
 	background-color: #f5f5f5;
 	border: 1px solid #dedede;
 	border-top: 1px solid #eee;
@@ -319,7 +318,10 @@ h1 a
 	font-weight: bold;
 	color: #565656;
 	cursor: pointer;
+	margin: 0 5px 0 0;
 	padding: 4px 5px 4px 5px; /* Links */
+    display: block;
+    float: left;
 }
 .buttons button {
 	width: auto;
@@ -403,6 +405,10 @@ h1 a
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+.buttons {
+    overflow: auto;
 }
 ul {
     padding: 0;
@@ -944,3 +950,4 @@ div.slope-category-0 {
 p#choices input {
     margin-left: 12px;
 }
+
